--- a/hugo.yaml
+++ b/hugo.yaml
@@ -31,11 +31,11 @@ params:
     imageTitle: "Profile"
     buttons:
       - name: Writeups
-        url: "/posts"
+        url: "./posts"
       - name: Tags
-        url: "/tags"
+        url: "./tags"
       - name: GitHub
-        url: "https://github.com/swkima"
+        url: "https://github.com/swkima-dev"
 
   # ホームページがカード風になる
   homeInfoParams:
@@ -45,20 +45,17 @@ params:
       picoCTF / picoGym の writeup を中心に投稿しています。
 
   # トップページの記事リストデザイン
-  # ListStyleをcardにすると「ボーダー付きのカード型」になる！
-  # ← これがあなたが求めている “記事の枠線（ボーダー）” です
   assets:
     disableHLJS: false        # highlight.js 有効
     favicon: ""               # 任意
 
   # カードスタイル
-  # ボーダーが出ない → listStyle が "card" になっていない可能性が高いです
   listStyle: "card"
 
   # シェアリンクを出す
   socialIcons:
     - name: github
-      url: "https://github.com/swkima"
+      url: "https://github.com/swkima-dev"
 
 menu:
   main:
